--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Bienvenidos a mi proftafolio</h1>
     <h2>Web de mis trabajos</h2>
+    <a href="http://www.google.com">google</a>
 </body>
 </html>
